# colyseus-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main-v1.cpp  main-v2.cpp  main.cpp  vcpkg.json
src/core/: ArraySchema.cpp  ArraySchema.hpp  MapSchema.cpp  MapSchema.hpp  PrimitiveTypes.h  Protocol.hpp  Schema.hpp  SchemaSerializer.hpp  SchemaUtils.hpp  Serializer.cpp  Serializer.hpp  schema.h
src/core/utils/: HasIsSchema.hpp
src/poco/: Axios.cpp  Axios.hpp  Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  Room.hpp  Utils.cpp  Utils.hpp  WebSocketClient.cpp  WebSocketClient.hpp
src/poco/apps/: DummyUpdater.cpp  DummyUpdater.hpp  MarketPlaceApp.cpp  MarketPlaceApp.hpp
src/tests/: ClientTest.cpp  ConnectionTest.cpp  HasIsSchemaTest.cpp  IsSchemaTest.cpp  MockWebSocketServer.cpp  MockWebSocketServer.hpp  UtilsTests.cpp
